# shell-extensions-zodiac

./: Makefile  Makefile.in  README  README~  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.ac~  extension.mk
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: shell-20110715-1.webm  shell-20110715a-1.webm
extensions/: Makefile  Makefile.in
extensions/activitiesbutton/: Makefile  Makefile.am  Makefile.in  extension.js  extension.js~  metadata.json  metadata.json.in  metadata.json.in~  org.gnome.shell.extensions.activitiesbutton.gschema.xml  org.gnome.shell.extensions.activitiesbutton.gschema.xml.in  org.gnome.shell.extensions.activitiesbutton.gschema.xml.in~  stylesheet.css  stylesheet.css~
extensions/alternate-tab/: Makefile  Makefile.in
extensions/alternative-status-menu/: Makefile  Makefile.in  extension.js~
extensions/auto-move-windows/: Makefile  Makefile.in
extensions/autohidedock/: Makefile.am  extension.js  extension.js~  metadata.json.in  metadata.json.in~  org.gnome.shell.extensions.autohidedock.gschema.xml.in  org.gnome.shell.extensions.autohidedock.gschema.xml.in~
extensions/autohidetopbar/: Makefile.am  README  extension.js  extension.js~  metadata.json  metadata.json.in  metadata.json.in~
extensions/dock/: Makefile  Makefile.in
extensions/drive-menu/: Makefile  Makefile.in
extensions/example/: Makefile  Makefile.in
extensions/gajim/: Makefile  Makefile.in
extensions/icon-manager/: Makefile.am  Makefile.am~  metadata.json.in  metadata.json.in~  org.gnome.shell.extensions.icon-manager.gschema.xml.in
extensions/move-activities/: Makefile  Makefile.am  Makefile.in  extension.js  extension.js~  metadata.json  metadata.json.in  metadata.json.in~  org.gnome.shell.extensions.move-activities.gschema.xml  org.gnome.shell.extensions.move-activities.gschema.xml.in  org.gnome.shell.extensions.move-activities.gschema.xml.in~
extensions/moveclock/: Makefile  Makefile.am  Makefile.in  extension.js  metadata.json  metadata.json.in  org.gnome.shell.extensions.moveclock.gschema.xml  org.gnome.shell.extensions.moveclock.gschema.xml.in
extensions/native-window-placement/: Makefile  Makefile.in
extensions/noa11y/: metadata.json.in
extensions/places-menu/: Makefile  Makefile.in
extensions/systemMonitor/: Makefile  Makefile.in
extensions/user-theme/: Makefile  Makefile.in
extensions/windowsNavigator/: Makefile  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cs.gmo  da.gmo  de.gmo  default.mo  default.po  es.gmo  es.mo  es.po  fr.gmo  gl.gmo  it.gmo  lv.gmo  nb.gmo  pl.gmo  sl.gmo  vi.gmo
(+2 files in other folders)
